k8s/apps/paulintrognon.fr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paulintrognon-fr
spec:
  selector:
    app: paulintrognon-fr
  ports:
    - port: 80
      targetPort: 3000
